gke/chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chatbot
  name: chatbot
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - image: gcr.io/${PROJECT_ID}/nthu-line-flask:latest
        imagePullPolicy: Always
        name: nthu-line-flask
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatbot
  name: chatbot-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - nodePort: 32422
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: chatbot
  type: NodePort
